test/src/e2e_vm_tests/test_programs/should_pass/trait_map_use_impl_in_scope/src/main.sw
script;

use std::time::Time;
// use std::time::*;

pub fn main() {
    let duration = Time::now().duration_since(Time::from(0)).unwrap();
    let _ = duration + duration;
}
